# comfy-camera-control

./: PROJECT.md  README.md  __init__.py  nodes.py  pyproject.toml
.claude/: settings.local.json
web/: viewer.html  viewer_splat.html
web/js/: cameraControl.js  fzstd.js  gaussian-splats-3d.module.js  spz-decoder.js
